<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

    <group android:checkableBehavior="all">
        <item
                android:id="@+id/routes_filter"
                android:checkable="true"
                android:checked="true"
                android:title="@string/search_category_routes"/>

        <item
                android:id="@+id/stops_filter"
                android:checkable="true"
                android:checked="true"
                android:title="@string/search_category_stops"/>

        <item
                android:id="@+id/places_filter"
                android:checkable="true"
                android:checked="true"
                android:title="@string/search_category_places"/>

    </group>

</menu>