<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019 Derek Ellis. Subject to the MIT license.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context="ca.llamabagel.transpo.search.ui.SearchActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/app_bar_layout">

        <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/search_back_button"
                        android:src="@drawable/ic_arrow_back"
                        android:contentDescription="@string/back_alt_text"
                        android:background="?selectableItemBackgroundBorderless"
                        app:layout_constraintTop_toTopOf="@id/search_bar"
                        app:layout_constraintBottom_toBottomOf="@id/search_bar"
                        app:layout_constraintStart_toStartOf="parent"/>

                <ca.llamabagel.transpo.search.ui.CustomSearchView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/search_bar"
                        android:layout_marginTop="@dimen/small"
                        android:layout_marginStart="@dimen/small"
                        android:layout_marginEnd="@dimen/small"
                        android:background="@android:color/transparent"
                        android:iconifiedByDefault="false"
                        android:inputType="textPersonName"
                        android:imeOptions="actionSearch"
                        android:hint="@string/search_hint"
                        android:ems="10"
                        app:layout_constraintStart_toEndOf="@id/search_back_button"
                        app:layout_constraintEnd_toStartOf="@id/clear_search_button"
                        app:layout_constraintTop_toTopOf="parent"/>

                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/clear_search_button"
                        android:layout_marginEnd="@dimen/small"
                        android:src="@drawable/ic_clear"
                        android:background="?selectableItemBackgroundBorderless"
                        android:visibility="gone"
                        android:contentDescription="@string/search_filter_description"
                        app:layout_constraintTop_toTopOf="@id/search_bar"
                        app:layout_constraintBottom_toBottomOf="@id/search_bar"
                        app:layout_constraintEnd_toEndOf="parent"/>

                <ca.llamabagel.transpo.search.ui.viewholders.SearchFilterView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/search_filter_view"
                        android:paddingTop="@dimen/xsmall"
                        android:paddingBottom="@dimen/xsmall"
                        app:layout_constraintTop_toBottomOf="@id/search_bar"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_results_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/app_bar_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

</androidx.constraintlayout.widget.ConstraintLayout>